# address-geocoder

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: api.py  main.py
src/config/: address_geocoding.py  app.py  config_validator.py  input.py  iris_geocoding.py  logger.py
src/config/iris_geojson/CONTOURS-IRIS_2-1_SHP_LAMB93_FXX-2021/: CONTOURS-IRIS.shp  CONTOURS-IRIS.shx  LISTE.csv
src/config/iris_geojson/CONTOURS-IRIS_2-1_SHP_RGAF09UTM20_GLP-2021/: CONTOURS-IRIS.dbf  CONTOURS-IRIS.shp  CONTOURS-IRIS.shx
src/config/iris_geojson/CONTOURS-IRIS_2-1_SHP_RGAF09UTM20_MTQ-2021/: CONTOURS-IRIS.dbf  CONTOURS-IRIS.shp  CONTOURS-IRIS.shx
src/config/iris_geojson/CONTOURS-IRIS_2-1_SHP_RGM04UTM38S_MYT-2021/: CONTOURS-IRIS.dbf  CONTOURS-IRIS.shp  CONTOURS-IRIS.shx
src/config/iris_geojson/CONTOURS-IRIS_2-1_SHP_RGR92UTM40S_REU-2021/: CONTOURS-IRIS.dbf  CONTOURS-IRIS.shp  CONTOURS-IRIS.shx
src/config/iris_geojson/CONTOURS-IRIS_2-1_SHP_UTM22RGFG95_GUF-2021/: CONTOURS-IRIS.dbf  CONTOURS-IRIS.shp  CONTOURS-IRIS.shx  LISTE.csv
src/utils/: address_geocoder.py  geocoder.py  geocoding_orchestrator.py  helpers.py  iris_geocoder.py  orchestrator.py
