[project]
name = "address-geocoder"
version = "0.1.0"
description = "FastAPI-based Address Geocoder is a powerful Python-based solution for geocoding raw addresses"
authors = [
  {name = "Mohamed Ehouran", email = "mohamedehouran@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "db-dtypes>=1.4.3",
    "fastapi>=0.115.13",
    "geopandas>=1.1.0",
    "geopy>=2.4.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pandera>=0.24.0",
    "pre-commit>=4.2.0",
    "pyarrow>=20.0.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
